Add proxying support for user dev servers
Implements reverse proxy to allow both sprite-mobile UI and user dev servers
to coexist on port 8080:

- Move sprite-mobile UI to /vibe-engine/* path
- Proxy root path (/*) to localhost:3000 for user dev servers
- Add WebSocket proxying for HMR (Vite, Next.js, etc.)
- Update all frontend paths to use /vibe-engine prefix
- Scope session cookies to /vibe-engine for security
- Add helpful error page when dev server not running
- Update service worker cache to v44-vibe-engine

Benefits:
- Users can run dev servers on standard port 3000
- Access via public port: http://sprite-ip:8080/
- sprite-mobile UI: http://sprite-ip:8080/vibe-engine/
- Full HMR support through WebSocket proxying
- No nginx or deployment changes needed

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
   <meta name="theme-color" content="#1a1a2e">
   <!-- Turbo/Hotwire Native: hide native navigation bar, we use our own header -->
   <meta name="turbo:native-navigation" content="hidden">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="apple-touch-icon" href="/icon-192.png">
+  <link rel="manifest" href="/vibe-engine/manifest.json">
+  <link rel="apple-touch-icon" href="/vibe-engine/icon-192.png">
   <title>Vibe-Link</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
-  <link rel="stylesheet" href="/styles.css?v=2">
+  <link rel="stylesheet" href="/vibe-engine/styles.css?v=3">
 </head>
 <body>
   <!-- Waking overlay - shown while sprite is waking from suspension -->
@@ -220,6 +220,6 @@
       }
     })();
   </script>
-  <script src="/app.js?v=2"></script>
+  <script src="/vibe-engine/app.js?v=3"></script>
 </body>
 </html>
