Rebrand from Vibe-Link to Vibe-Engine
Update all branding references:
- Public-facing name: Vibe-Engine
- CLI tool: vibe-engine (renamed from vibe-link)
- Directory: cmd/vibe-engine/ (renamed from cmd/vibe-link/)
- Binary name: vibe-engine
- Go module: github.com/emonty/sprite-mobile/cmd/vibe-engine

Updated files:
- HTML titles and headers (index.html, login.html)
- PWA manifest (manifest.json)
- README.md and documentation
- CLI tool directory and all references
- Makefile and go.mod

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="turbo:native-navigation" content="hidden">
   <link rel="manifest" href="/vibe-engine/manifest.json">
   <link rel="apple-touch-icon" href="/vibe-engine/icon-192.png">
-  <title>Vibe-Link</title>
+  <title>Vibe-Engine</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
   <link rel="stylesheet" href="/vibe-engine/styles.css?v=3">
 </head>
