--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#1a1a2e">
   <link rel="manifest" href="/vibe-engine/manifest.json">
   <link rel="apple-touch-icon" href="/vibe-engine/icon-192.png">
-  <title>Login - Vibe-Link</title>
+  <title>Login - Vibe-Engine</title>
   <link rel="stylesheet" href="/vibe-engine/styles.css?v=3">
   <style>
     body {
@@ -122,7 +122,7 @@
   <div class="login-container">
     <div class="login-header">
       <div class="sprite-icon">&#128125;</div>
-      <h1>Vibe-Link</h1>
+      <h1>Vibe-Engine</h1>
       <p>Enter password to continue</p>
     </div>
 
